Attempt "height: stretch" viewport fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,7 +5,7 @@
 html,
 body,
 #__next {
-  height: 100%;
+  height: stretch;
 }
 
 body {
